add backbone for roomType

--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -23,6 +23,7 @@
   <div class="tab">
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Accueil</button></a>
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Classes</button></a>
+    <a class="btn" href="#!/roomTypeTab"><button class="tablinks" onclick="openTab(event)">Type de salle</button></a>
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Professeurs</button></a>
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Horaires</button></a>
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Matières</button></a>
@@ -41,6 +42,7 @@
   <script src="view2/view2.js"></script>
   <!--Add the scripts used for the differnet tab here-->
   <script src="hometab/hometab.js"></script>
+  <script src="roomTypeTab/roomTypeTab.js"></script>
 
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
