--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -24,6 +24,7 @@
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Accueil</button></a>
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Classes</button></a>
     <a class="btn" href="#!/teacherTab"><button class="tablinks" onclick="openTab(event)">Professeurs</button></a>
+    <a class="btn" href="#!/roomTab"><button class="tablinks" onclick="openTab(event)">Salle</button></a>
     <a class="btn" href="#!/roomTypeTab"><button class="tablinks" onclick="openTab(event)">Type de salle</button></a>
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Horaires</button></a>
     <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Matières</button></a>
@@ -51,6 +52,7 @@
   <script src="hometab/hometab.js"></script>
   <script src="teacherTab/teacherTab.js"></script>
   <script src="roomTypeTab/roomTypeTab.js"></script>
+  <script src="roomTab/roomTab.js"></script>
 
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
