--- a/projects/IHM/app/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/roomTypeTab/roomTypeTab.html
@@ -1,6 +1,29 @@
 <h3>Type de salle</h3>
-<p>
+<div ng-controller="secondController">
+    {{myVar}}
+
+<table id="subjectTable">
+    <tr>
+        <td>
+                <md-inputcontainer>
+                    <textarea id="subjectInput" ng-keypress="pressKeyInput($event.keyCode)" cols="25" rows = "1" style="resize: none"></textarea>
+                </md-inputcontainer>
+
+        </td>
+        <td>
+            <md-button class="md-raised md-primary" ng-click="addSubject()">+</md-button>
+        </td>
+    </tr>
+    <tr ng-repeat="subject in subjects">
+            <td>
+                {{subject.name}}
+            </td>
+            <td>
+                <md-button ng-click="removeSubject(subject.number)">X</md-button>
+            </td>
+    </tr>
+</table>
 
 
+</div>
 
-</p>
