ajout le menu de creations de cours dans les onglets

--- a/projects/IHM/app/programmeMenu/programmeMenu.html
+++ b/projects/IHM/app/programmeMenu/programmeMenu.html
@@ -1,6 +1,6 @@
 
 <div class="tab">
-  <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Accueil</button></a>
+  <a class="btn" href="#!/roomTypeTab"><button class="tablinks" onclick="openTab(event)">Matières</button></a>
   <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Classes</button></a>
   <a class="btn" href="#!/teacherTab"><button class="tablinks" onclick="openTab(event)">Professeurs</button></a>
 </div>
