--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -17,7 +17,6 @@
       <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
       <link rel="stylesheet" href="app.css">
       <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0-rc2/angular-material.min.css">
       <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
 
@@ -27,7 +26,32 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
-      <div ng-include="body"></div>
+      <div ng-cloak="" class="topnav">
+        <md-content>
+          <md-tabs md-dynamic-height="15dpi" md-border-bottom="">
+            <md-tab class="menulinks" label="Accueil">
+              <md-content>
+                <div ng-include="homeMenu"></div>
+              </md-content>
+            </md-tab>
+            <md-tab class="menulinks" label="Info Collège">
+              <md-content>
+                <div ng-include="programmeMenu"></div>
+              </md-content>
+            </md-tab>
+            <md-tab class="menulinks" label="Programme">
+              <md-content>
+                <div ng-include="schoolMenu"></div>
+              </md-content>
+            </md-tab>
+            <md-tab class="menulinks" label="Prof - Cours">
+              <md-content>
+                <div ng-include="teacherMenu"></div>
+              </md-content>
+            </md-tab>
+          </md-tabs>
+        </md-content>
+      </div>
 
       <div ng-view></div>
 
@@ -59,9 +83,6 @@
       <script src="components/version/version.js"></script>
       <script src="components/version/version-directive.js"></script>
       <script src="components/version/interpolate-filter.js"></script>
-
-
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     </body>
   </section>
