--- a/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
+++ b/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
@@ -1,8 +1,8 @@
 
 <div class="tab">
-  <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Accueil</button></a>
-  <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Classes</button></a>
-  <a class="btn" href="#!/teacherTab"><button class="tablinks" onclick="openTab(event)">Professeurs</button></a>
+  <button class="tablinks" onclick="openTab(event)">Accueil</button>
+  <button class="tablinks" onclick="openTab(event)">Classes</button>
+  <button class="tablinks" onclick="openTab(event)">Professeurs</button>
 </div>
 
 <div class="tabcontent"></div>
