--- a/projects/IHM/app/teacherMenu/teacherMenu.html
+++ b/projects/IHM/app/teacherMenu/teacherMenu.html
@@ -1,6 +1,6 @@
 
 <div class="tab">
-  <a class="btn" href="#!/teacherMenu/teacherTab"><button class="tablinks" onclick="openTab(event)">Enseignant</button></a>
+  <button class="tablinks" onclick="openTab(event)">Enseignant</button>
 </div>
 
 <div class="tabcontent">
