--- a/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
+++ b/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
@@ -1,8 +1,13 @@
 
-<div class="tab">
-  <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Accueil</button></a>
-  <a class="btn" href="#!/hometab"><button class="tablinks" onclick="openTab(event)">Classes</button></a>
-  <a class="btn" href="#!/teacherTab"><button class="tablinks" onclick="openTab(event)">Professeurs</button></a>
+
+<div class="tab" ng-controller="schoolInformationMenuCtrl">
+
+  <div style="display:none" ng-model="page"></div>
+
+  <button class="tablinks" ng-click="openTab('Accueil')">Accueil</button>
+  <button class="tablinks" ng-click="openTab('schoolInformationMenu/roomTypeTab/roomTypeTab.html')">Type de salles</button>
+  <button class="tablinks" ng-click="openTab('Accueil')">Classes</button>
+  <button class="tablinks" ng-click="openTab('Accueil')">Professeurs</button>
 </div>
 
-<div class="tabcontent"></div>
+<div class="tabcontent" ng-include="page"></div>
