tmp commit to pull

--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -6,7 +6,7 @@
                     <div ng-include="homeMenu"></div>
                     </md-content>
                 </md-tab>
-                <md-tab class="menulinks" label="Info Collège">
+                <md-tab class="menulinks" label="Etablissement">
                     <md-content>
                         <div ng-include="schoolMenu"></div>
                     </md-content>
