--- a/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
+++ b/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
@@ -4,10 +4,9 @@
 
   <div style="display:none" ng-model="page"></div>
 
-  <button class="tablinks" ng-click="openTab('Accueil')">Accueil</button>
+  <button class="tablinks" ng-click="openTab('schoolInformationMenu/scheduleTab/scheduleTab.html')">Jours et horaires</button>
   <button class="tablinks" ng-click="openTab('schoolInformationMenu/roomTypeTab/roomTypeTab.html')">Type de salles</button>
-  <button class="tablinks" ng-click="openTab('Accueil')">Classes</button>
-  <button class="tablinks" ng-click="openTab('Accueil')">Professeurs</button>
+  <button class="tablinks" ng-click="openTab('schoolInformationMenu/roomTab/roomTab.html')">Salles</button>
 
 </div>
 
