--- a/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
+++ b/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
@@ -4,9 +4,9 @@
 
   <div style="display:none" ng-model="page"></div>
 
-  <button class="tablinks" ng-click="openTab('schoolInformationMenu/scheduleTab/scheduleTab.html')">Jours et horaires</button>
-  <button class="tablinks" ng-click="openTab('schoolInformationMenu/roomTypeTab/roomTypeTab.html')">Type de salles</button>
-  <button class="tablinks" ng-click="openTab('schoolInformationMenu/roomTab/roomTab.html')">Salles</button>
+  <button id="schHoraires" class="tablinks" ng-click="openTab('schoolInformationMenu/scheduleTab/scheduleTab.html', 'schHoraires')">Jours et horaires</button>
+  <button id="schTypeSalles" class="tablinks" ng-click="openTab('schoolInformationMenu/roomTypeTab/roomTypeTab.html', 'schTypeSalles')">Type de salles</button>
+  <button id="schSalles" class="tablinks" ng-click="openTab('schoolInformationMenu/roomTab/roomTab.html', 'schSalles')">Salles</button>
 
 </div>
 
