--- a/projects/IHM/app/homeMenu/homeMenu.html
+++ b/projects/IHM/app/homeMenu/homeMenu.html
@@ -5,12 +5,14 @@
 		<button id="homeLoad" class="tablinks" ng-click="load()">Charger une configuration <br/>  </button>
 	</div>
 
-	<div class="tabcontent" ng-include="page"></div>
+	<div class="tabcontent">
+		<h1>Accueil</h1>
+		<p>Bienvenue sur ETOILE</p>
+		<h2>Qu'est ce qu'ETOILE ?</h2>
+		<p>
+			ETOILE est l'Emploi du Temps Organisé et Intelligent conçu pour Lyon et ses écoles. Il s'agit d'une
+			interface rendant la génération d'emploi du temps intuitive et agréable.
+		</p>
+	</div>
 </div>
 
-
-
-<div id="homeBody" class="mainDiv">
-	<h3>Accueil</h3>
-	<p>Vous êtes bien à l'accueil</p>
-</div>
