Improve roomTypeTab's list

--- a/projects/IHM/app/programmeMenu/programmeMenu.html
+++ b/projects/IHM/app/programmeMenu/programmeMenu.html
@@ -1,9 +1,9 @@
 <div ng-controller="programmeMenuCtrl">
   <div style="display:none" ng-model="page"></div>
 <div class="tab">
-  <button id="prgNiveauxClasses" class="tablinks" ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'prgNiveauxClasses')">Niveaux - Classes</button>
-  <button id="prgMatieres" class="tablinks" ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'prgMatieres')">Matières</button>
-  <button id="prgRepartition" class="tablinks" ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'prgRepartition')">Répartition horaire par niveau</button>
+  <button id="programmeGradeClasses" class="tablinks" ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'programmeGradeClasses')">Niveaux - Classes</button>
+  <button id="programmeSubjects" class="tablinks" ng-click="openTab('programmeMenu/subjectsTab/subjectsTab.html', 'programmeSubjects')">Matières</button>
+  <button id="programmeProgramme" class="tablinks" ng-click="openTab('programmeMenu/programmeTab/programmeTab.html', 'programmeProgramme')">Répartition horaire par niveau</button>
 </div>
 
   <div class="tabcontent" ng-include="page"></div>
