--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -56,9 +56,11 @@
       <script src="schoolInformationMenu/roomTypeTab/roomTypeTab.js"></script>
       <script src="schoolInformationMenu/roomTab/roomTab.js"></script>
 
+
       <script src="homeMenu/homeMenu.js"></script>
 
       <script src="programmeMenu/programmeMenu.js"></script>
+      <script src="programmeMenu/subjectsTab/subjectsTab.js"></script>
       <script src="teacherMenu/teacherMenu.js"></script>
       <script src="builderXml/builder.js"></script>
 
