--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -11,8 +11,8 @@
             </td>
             <td>
                 <!--<md-button class="md-raised md-primary" ng-cliaddRoomTypeject()">+</md-button>-->
-                <md-button class="md-fab md-mini md-primary" aria-label="Use Android" ng-click="addSubject()">
-                    <md-icon>done</md-icon>
+                <md-button class="md-icon-button" aria-label="Use Android" ng-click="addSubject()">
+                    <md-icon>add</md-icon>
                 </md-button>
             </td>
         </tr>
@@ -21,9 +21,9 @@
                 {{subject}}
             </td>
             <td>
-                <md-button class="md-fab md-mini md-warn" aria-label="supprimmer ce type de salle"
+                <md-button class="md-icon-button" aria-label="supprimmer ce type de salle"
                            ng-click="removeSubject($index)">
-                    <md-icon>highlight_off</md-icon>
+                    <md-icon>delete</md-icon>
                 </md-button>
             </td>
         </tr>
