Fix previous commit

--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -1,7 +1,7 @@
 <h3>Matieres</h3>
 <div ng-controller="subjectsTabCtrl">
 
-  <table id="subjectTable" border="black">
+  <table id="subjectTable">
     <tr>
       <td>
         <md-inputcontainer>
