Add function printObjectCaracteristic, improve roomTypeTab and subjectTab

--- a/projects/IHM/app/programmeMenu/programmeMenu.html
+++ b/projects/IHM/app/programmeMenu/programmeMenu.html
@@ -1,10 +1,18 @@
 <div ng-controller="programmeMenuCtrl">
   <div style="display:none" ng-model="page"></div>
-<div class="tab">
-  <button id="programmeGradeClasses" class="tablinks" ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'programmeGradeClasses')">Niveaux - Classes</button>
-  <button id="programmeSubjects" class="tablinks" ng-click="openTab('programmeMenu/subjectsTab/subjectsTab.html', 'programmeSubjects')">Matières</button>
-  <button id="programmeProgramme" class="tablinks" ng-click="openTab('programmeMenu/programmeTab/programmeTab.html', 'programmeProgramme')">Répartition horaire par niveau</button>
-</div>
+  <div class="tab">
+    <button id="programmeGradeClasses" class="tablinks"
+            ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'programmeGradeClasses')">
+      Niveaux - Classes
+    </button>
+    <button id="programmeSubjects" class="tablinks" ng-click="openTab('programmeMenu/subjectsTab/subjectsTab.html', 'programmeSubjects')">
+      Matières
+    </button>
+    <button id="programmeProgramme" class="tablinks"
+            ng-click="openTab('programmeMenu/programmeTab/programmeTab.html', 'programmeProgramme')">Répartition horaire
+      par niveau
+    </button>
+  </div>
 
   <div class="tabcontent" ng-include="page"></div>
 </div>
