--- a/projects/IHM/app/homeMenu/homeMenu.html
+++ b/projects/IHM/app/homeMenu/homeMenu.html
@@ -3,6 +3,7 @@
 	<div class="tab">
 		<button id="homeSave" class="tablinks" ng-click="save()">Sauver la configuration <br/> actuelle</button>
 		<button id="homeLoad" class="tablinks" ng-click="load()">Charger une configuration <br/>  </button>
+		<button id="homeGen" class="tablinks" ng-click="generate()"> Generer l'emploi du temps </button>
 	</div>
 
 	<div class="tabcontent">
