--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -62,7 +62,7 @@
       <script src="programmeMenu/programmeMenu.js"></script>
       <script src="programmeMenu/subjectsTab/subjectsTab.js"></script>
       <script src="teacherMenu/teacherMenu.js"></script>
-      <script src="builderXml/builder.js"></script>
+      <script src="services/builderXml/builder.js"></script>
 
 
       <script src="components/version/version.js"></script>
