resolve dependency of service

--- a/projects/IHM/app/index.html
+++ b/projects/IHM/app/index.html
@@ -69,6 +69,8 @@
       <script src="components/version/version-directive.js"></script>
       <script src="components/version/interpolate-filter.js"></script>
 
+      <script src="services/dataFactory/dataFactory.js"></script>
+
 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0-rc2/angular-material.min.css">
 
