Create view roomTab, link it with dataFactory

--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -11,13 +11,13 @@
     <tr>
       <td>
         <md-inputcontainer>
-          <input type="text" id="roomTypeInput" ng-model="inputValue" ng-keypress="pressKeyInput($event.keyCode)"
-                 cols="25" rows="1"
+          <input type="text" id="roomTypeInput" ng-model="inputValue" ng-keypress="pressKeyInput($event.keyCode)" cols="25" rows="1"
                  style="resize: none" placeholder="Entrer le nom de la matière"></input>
         </md-inputcontainer>
       </td>
       <td>
-        <select name="roomType" ng-model="roomTypeSelected" ng-options="roomType for roomType in roomTypeList" ng-keypress="pressKeyInput($event.keyCode)">
+        <select name="roomType" ng-model="roomTypeSelected" ng-options="roomType for roomType in roomTypeArray"
+                ng-keypress="pressKeyInput($event.keyCode)">
           <option value="Empty"></option>
         </select>
       </td>
@@ -28,7 +28,7 @@
         </md-button>
       </td>
     </tr>
-    <tr ng-repeat="subject in subjects track by subject.subjectName">
+    <tr ng-repeat="subject in subjectsArray track by subject.subjectName">
       <td>
         {{subject.subjectName}}
       </td>
@@ -36,8 +36,7 @@
         {{subject.roomType}}
       </td>
       <td>
-        <md-button class="md-icon-button" aria-label="supprimmer ce type de salle"
-                   ng-click="removeSubject($index)">
+        <md-button class="md-icon-button" aria-label="supprimmer ce type de salle" ng-click="removeSubject($index)">
           <md-icon>delete</md-icon>
         </md-button>
       </td>
