--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -1,29 +1,71 @@
+<link rel="stylesheet" type="text/css" href="schoolInformationMenu/roomTab/roomTab.css">
+
 <section ng-controller="roomTabCtrl">
 
 
   <h3>Salle</h3>
 
-  <table style="width:100%">
+  <table border="black">
     <tr>
       <th>Nom</th>
       <th>Type de salle</th>
     </tr>
-    <tr ng-repeat="r in rooms">
+
+    <tr>
+      <td>
+        <md-inputcontainer>
+          <input class="textInput" type="text" id="roomNameInput" ng-model="roomNameInputValue" ng-keypress="pressKeyInput($event.keyCode)"
+                 cols="25" rows="1" placeholder="Entrer le nom de la salle"></input>
+        </md-inputcontainer>
+      </td>
+      <td class="coursName">
+        <select class="coursName" chosen multiple display-selected-options="false" no-results-text="'Rentrer des types de salles'"
+        placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'" ng-options="roomType for roomType in roomTypesArray"
+        ng-model="roomTypes">
+        </select>
+      </td>
+      <td>
+        <md-button class="md-icon-button" aria-label="Use Android" ng-click="addRoom()">
+          <md-icon>add</md-icon>
+        </md-button>
+      </td>
+      </td>
+    </tr>
+
+    <tr ng-repeat="room in roomsArray">
+      <td>
+        {{room.Name}}
+      </td>
+      <td>
+        <ul>
+          <li class="roomTypeList" ng-repeat="roomType in room.RoomTypes">
+            {{roomType}}
+          </li>
+        </ul>
+      </td>
+      <td>
+        <md-button class="md-icon-button" aria-label="supprimmer ce type de salle" ng-click="removeRoom($index)">
+          <md-icon>delete</md-icon>
+        </md-button>
+      </td>
+    </tr>
+
+    <!--<tr ng-repeat="r in roomsArray">
       <td>
         <input type="text" name="roomName" ng-model="r.roomName"/>
       </td>
       <td class="coursName">
-        <select chosen
-                multiple
-                display-selected-options="false"
-                class="coursName"
-                no-results-text="'Pas de type de salle trouvé pour:'"
-                placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'"
-                ng-options="rt.roomType for rt in roomTypes"
+        <select chosen multiple display-selected-options="false" class="coursName" no-results-text="'Pas de type de salle trouvé pour:'"
+                placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'" ng-options="rt.roomType for rt in roomTypesArray"
                 ng-model="r.roomType">
           <option value=""></option>
         </select>
       </td>
-    </tr>
+      <td>
+        <md-button class="md-icon-button" aria-label="supprimmer cette salle" ng-click="removeRoom($index)">
+          <md-icon>delete</md-icon>
+        </md-button>
+      </td>
+    </tr> !-->
   </table>
 </section>
