--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -19,7 +19,7 @@
         </md-button>
       </td>
     </tr>
-    <tr ng-repeat="roomType in roomTypes track by $index">
+    <tr ng-repeat="roomType in roomTypesArray track by $index">
       <td>
         {{roomType}}
       </td>
