changed ajout teacher to overlay to follow style of other windows (non modifiable display, button add + delete)

--- a/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
+++ b/projects/IHM/app/programmeMenu/subjectsTab/subjectsTab.html
@@ -1,7 +1,7 @@
 <h3>Matières</h3>
 <div ng-controller="subjectsTabCtrl">
 
-  <table id="subjectTable">
+  <table id="subjectTable" class="framedTable">
     <th>
       Matière
     </th>
