--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -5,7 +5,7 @@
 
   <h3>Salle</h3>
 
-  <table border="black">
+  <table class="framedTable">
     <tr>
       <th>Nom</th>
       <th>Type de salle</th>
@@ -38,7 +38,7 @@
       </td>
       <td>
         <ul>
-          <li class="roomTypeList" ng-repeat="roomType in room.RoomTypes">
+          <li class="dotlessList" ng-repeat="roomType in room.RoomTypes">
             {{roomType}}
           </li>
         </ul>
