--- a/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTypeTab/roomTypeTab.html
@@ -3,7 +3,7 @@
   <!--TODO:LANG-->
   Ajoutez/ supprimmez des type de salle
 
-  <table id="subjectTable">
+  <table id="subjectTable" class="framedTable">
     <tr>
       <td>
         <md-inputcontainer>
