--- a/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
+++ b/projects/IHM/app/teacherMenu/teacherTab/teacherTab.html
@@ -3,7 +3,48 @@
   <!--<div class="tabcontent" onload="genereTableau()">-->
   <div class="tabcontent">
 
-    <table id="teacherTab">
+    <table id="teacherTab" class="framedTable">
+      <tr>
+        <th>Prenom</th>
+        <th>Nom</th>
+        <th>Matières</th>
+        <th>Groupes</th>
+        <th>Disponibilités</th>
+        <th>Commentaire</th>
+      </tr>
+      <tr ng-repeat="t in teachers">
+        <td>
+          {{t.FirstName}}
+        </td>
+        <td>
+          {{t.LastName}}
+        </td>
+        <td class="coursName">
+          <ul>
+            <li class="dotlessList" ng-repeat="sub in t.Subject">
+              {{sub}}
+            </li>
+          </ul>
+        </td>
+        <td>
+          {{ t.Class }}
+        </td>
+        <td>
+          ...
+        </td>
+        <td>
+          <textarea readonly class="inputCom" name="com" rows="5">{{ t.Comments }}</textarea>
+        </td>
+        <td>
+          <!-- TODO fonction supprimer après discussion-->
+          <md-button class="md-icon-button" ng-click="addTeacherLine()">
+            <i class="material-icons">delete</i>
+          </md-button>
+        </td>
+      </tr>
+
+
+    <!--<table id="teacherTab" class="framedTable">
       <tr>
         <th>Prenom</th>
         <th>Nom</th>
@@ -40,93 +81,64 @@
           <textarea class="inputCom" name="com" rows="5">{{ t.Comments }}</textarea>
         </td>
         <td>
-          <!-- TODO fonction supprimer après discussion -->
+          <!-- TODO fonction supprimer après discussion
           <md-button class="md-icon-button" ng-click="addTeacherLine()">
             <i class="material-icons">delete</i>
           </md-button>
         </td>
       </tr>
-    </table>
-
-    <!--<code>{{teachers}}</code>-->
-    <!--<h3>Professeurs</h3>-->
-    <!--<p>defini la liste des profs</p>-->
-
-
-    <!--<table class="selectionTable">-->
-      <!--<tr>-->
-        <!--<th>Nom</th>-->
-        <!--<th>Matières</th>-->
-        <!--<th>Groupes</th>-->
-        <!--<th>Disponibilitées</th>-->
-        <!--<th>Comentaire</th>-->
-      <!--</tr>-->
-      <!--<tr>-->
-        <!--<td>-->
-          <!--<input type="text" name="name" value="Jill Smith" >-->
-        <!--</td>-->
-        <!--<td class="coursName">-->
-          <!--<select chosen multiple class="coursName">-->
-            <!--<option value="maths">Math</option>-->
-            <!--<option selected value="anglais">Anglais</option>-->
-            <!--<option value="latin">Latin</option>-->
-            <!--<option value="espagnol">Espagnol</option>-->
-            <!--<option value="francais">francais</option>-->
-            <!--<option selected value="allemand">allemand</option>-->
-            <!--<option value="histoire">histoire</option>-->
-            <!--<option value="musique">musique</option>-->
-            <!--<option value="art">art</option>-->
-            <!--<option value="thechno">thechno</option>-->
-            <!--<option value="grec">grec</option>-->
-            <!--<option value="SVT">SVT</option>-->
-            <!--<option value="phisique">phisique</option>-->
-            <!--<option value="EPS">EPS</option>-->
-          <!--</select>-->
-        <!--</td>-->
-        <!--<td>3A, 3D, 5C</td>-->
-        <!--<td>...</td>-->
-        <!--<td>-->
-          <!--<textarea class="inputCom" name="com" rows="5" value=""></textarea>-->
-        <!--</td>-->
-      <!--</tr>-->
-      <!--<tr>-->
-        <!--<td>-->
-          <!--<input type="text" name="name" value="Eve Jackson">-->
-        <!--</td>-->
-        <!--<td class="coursName">-->
-          <!--<select chosen multiple class="coursName">-->
-            <!--<option value="maths">Math</option>-->
-            <!--<option value="anglais">Anglais</option>-->
-            <!--<option value="latin">Latin</option>-->
-            <!--<option value="espagnol">Espagnol</option>-->
-            <!--<option value="francais">francais</option>-->
-            <!--<option value="allemand">allemand</option>-->
-            <!--<option value="histoire">histoire</option>-->
-            <!--<option value="musique">musique</option>-->
-            <!--<option value="art">art</option>-->
-            <!--<option value="thechno">thechno</option>-->
-            <!--<option value="grec">grec</option>-->
-            <!--<option value="SVT">SVT</option>-->
-            <!--<option value="phisique">phisique</option>-->
-            <!--<option value="EPS">EPS</option>-->
-          <!--</select>-->
-        <!--</td>-->
-        <!--<td>6A, 4D, 5B</td>-->
-        <!--<td>...</td>-->
-        <!--<td>-->
-          <!--<textarea class="inputCom" name="com" rows="5" value=""></textarea>-->
-        <!--</td>-->
-      <!--</tr>-->
+    </table>-->
 
     <!-- TODO ajout ligne par ligne "meh" ==> vers un assistant d'ajout de professeur"-->
       <tr>
         <td>
-          <md-button class="md-icon-button" ng-click="addTeacherLine()">
+          <md-button class="md-icon-button" ng-click="openAddTeacher()">
             <i class="material-icons">add</i>
           </md-button>
         </td>
       </tr>
     </table>
+
+    <div id="addTeacherOverlay" class="overlay">
+
+      <div class="formLayout">
+        <label>Prénom :</label>
+        <input id="firstname" type="text" name="firstname" ng-model="tpsFirstName"/>
+        <br/>
+
+        <label id="lastname" >Nom :</label>
+        <input type="text" name="lastName" ng-model="tpsLastName"/>
+        <br/>
+
+        <label>Matières :</label>
+        <select id="matieres"
+                name="matieres"
+                chosen
+                multiple
+                class="coursName"
+                no-results-text="'Pas de Matière trouvé pour:'"
+                placeholder-text-multiple="'Pas de Matière selectionné pour le moment'"
+                ng-options="c.Name for c in cours"
+                ng-model="tpsMatieres">
+          <option value=""></option>
+        </select>
+        <br/>
+
+        <label id="com" >Commentaire :</label>
+        <textarea style="resize:none" name="com" rows="5" ng-model="tpsCom"/>
+
+        <div class="formButtonLayout">
+          <md-button class="md-icon-button" ng-click="closeOverlay()">
+            <i class="material-icons">close</i>
+          </md-button>
+          <md-button class="md-icon-button" ng-click="addTeacher()">
+            <i class="material-icons">done</i>
+          </md-button>
+        </div>
+
+      </div>
+
+    </div>
 
   </div>
 
