Fix errors when user puts empty fields

--- a/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
+++ b/projects/IHM/app/schoolInformationMenu/roomTab/roomTab.html
@@ -14,14 +14,14 @@
     <tr>
       <td>
         <md-inputcontainer>
-          <input class="textInput" type="text" id="roomNameInput" ng-model="roomNameInputValue" ng-keypress="pressKeyInput($event.keyCode)"
+          <input class="textInput" type="text" id="roomNameInput" ng-model="roomNameInputValue" ng-keypress="keyPress($event.keyCode)"
                  cols="25" rows="1" placeholder="Entrer le nom de la salle"></input>
         </md-inputcontainer>
       </td>
       <td class="coursName">
-        <select class="coursName" chosen multiple display-selected-options="false" no-results-text="'Rentrer des types de salles'"
+        <select class="coursName" chosen multiple display-selected-options="false" no-results-text="'Pas de type de salle trouvé'"
         placeholder-text-multiple="'Pas de type de salle selectionné pour le moment'" ng-options="roomType for roomType in roomTypesArray"
-        ng-model="roomTypes">
+        ng-model="roomTypesSelected" ng-keypress="keyPress($event.keyCode)">
         </select>
       </td>
       <td>
